2002-11-04  Dan Espen  <dane@mk.telcordia.com>

	* fvwm/fvwm.1.in: colour -> color
	Language check.

2002-11-04  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/fvwm.1.in:
	* fvwm/fvwm.c (usage):
	(main):
	pallet -> palette

2002-11-04  olicha  <olivier.chapuis@free.fr>

	* configure.in:
	Added -lXrender in Xft 1 tests (Ethan Blanton <eblanton@cs.ohiou.edu>)

	* libs/PictureUtils.c (alloc_color_dynamic_no_limit):
	(finish_ct_init):
	(PictureFreeColors):
	(PicturePrintColorInfo):
	Trace colours allocation out of the pallet in depth <= 8. Better
	information on coulours

	* libs/Fft.c (FftGetRotatedFont):
	* libs/Fft.h:
	Fixed rotated font when the original font has a matrix

	* libs/PictureBase.c (PictureInitCMapRoot):
	* libs/PictureUtils.h:
	* libs/PictureUtils.c (PictureInitColors):
	(PictureAllocColorTable):
	* libs/PictureBase.h (PictureColorLimitOption):
	* fvwm/fvwm.c (main):
	* fvwm/fvwm.1.in
	New options -strict-color-limit, -allocate-pallet, -static-pallet,
	-named-pallet. -color-limit now take only integer argument.


2002-11-04  Dominik Vogt  <dominik.vogt@gmx.de>

	* libs/Module.h (struct):
	new type FvwmWinPacketBodyHeader to access the standard fields in a
	packet with a window

2002-11-01  Dominik Vogt  <dominik.vogt@gmx.de>

	* NEWS:
	updated for 2.4.13

	* fvwm/functable.c (func_table):
	* fvwm/commands.h:
	* fvwm/style.c (style_parse_one_style_option):
	(parse_and_set_window_style):
	(__style_command):
	(CMD_Style):
	(CMD_FocusStyle):
	added a new command FocusStyle as a shorthand for
	"Style * FP..., FP..."

	* fvwm/builtins.c (__parse_vector_line_one_coord):
	(__parse_vector_line):
	(ReadDecorFace):
	split vector line parsing into sub functions
	(FreeDecorFace):
	fixed core dump in vector button offset patch

2002-11-01  Marcus Lundblad <ml@update.uu.se>

	* fvwm/screen.h (vector_coords):
	added fields for offsets
	* fvwm/builtins.c (ReadDecorFace):
	rewrote parser for vector definitions to accept optional offsets