@@ -1,3 +1,8 @@
+2002-11-06  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* fvwm/events.c (HandleExpose):
+	removed no-op
+
 2002-11-04  Dan Espen  <dane@mk.telcordia.com>
 
 	* fvwm/fvwm.1.in: colour -> color
